--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -1,85 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
-  <!-- Estilos personalizados -->
-  <link rel="stylesheet" href="/css/styles.css" />
-  <title>Carrito - S?gno</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../css/styles.css" />
+  <title>Carrito - SIGNO</title>
 </head>
 <body class="d-flex flex-column min-vh-100">
-  <!-- Header -->
-  <header class="container d-flex justify-content-between align-items-center py-3">
-    <div class="d-flex gap-2">
-      <a href="nosotros.html" class="btn btn-outline-dark">Nosotros</a>
-      <a href="tienda.html" class="btn btn-outline-dark">Tienda</a>
+  <!-- Navbar Bootstrap -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+    <div class="container">
+      <a class="navbar-brand" href="../index.html">SIGNO</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="mainNavbar">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="tienda.html">Tienda</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">Log in</a></li>
+          <li class="nav-item"><a class="nav-link" href="carrito.html">Carrito</a></li>
+        </ul>
+      </div>
     </div>
-    <h1 class="m-0 text-center">
-      <a href="index.html" class="text-decoration-none text-dark">S?gno</a>
-    </h1>
-    <div class="d-flex gap-2">
-      <a href="login.html" class="btn btn-outline-dark">Log in</a>
-      <a href="carrito.html" class="btn btn-outline-dark">Carrito</a>
-    </div>
-  </header>
+  </nav>
 
-  <!-- Main -->
   <main class="container my-4 flex-grow-1">
-    <div class="row">
-      <div class="col-12 mb-4">
-        <h2 class="text-center">Tu Carrito</h2>
-      </div>
-    </div>
-
-    <div class="row g-4">
-      <!-- Producto 1 -->
-      <div class="col-md-4">
-        <div class="card h-100">
-          <img src="/img/producto 1.jpg" class="card-img-top img-fluid" alt="Short pollera handmade S?gno" />
-          <div class="card-body">
-            <h5 class="card-title">Short pollera handmade S?gno</h5>
-            <p class="card-text">$30.000</p>
-          </div>
+    <h1 class="mb-4">Carrito</h1>
+    <div class="cart">
+      <!-- Ejemplo de producto en el carrito -->
+      <div class="product">
+        <div class="product-image">
+          <img src="../img/producto1.jpg" alt="Producto 1" class="img-fluid" style="max-width:100px;">
         </div>
-      </div>
-
-      <!-- Producto 2 -->
-      <div class="col-md-4">
-        <div class="card h-100">
-          <img src="/img/producto 2.jpg" class="card-img-top img-fluid" alt="Campera de cuero S?gno" />
-          <div class="card-body">
-            <h5 class="card-title">Campera de cuero S?gno</h5>
-            <p class="card-text">$70.000</p>
-          </div>
+        <div class="product-details">
+          <p>Producto 1</p>
+          <p>$1000</p>
         </div>
+        <button class="btn btn-danger">Eliminar</button>
       </div>
+      <!-- Más productos aquí -->
 
-      <!-- Producto 3 -->
-      <div class="col-md-4">
-        <div class="card h-100">
-          <img src="/img/producto 3.jpg" class="card-img-top img-fluid" alt="Monedero edición limitada S?gno" />
-          <div class="card-body">
-            <h5 class="card-title">Monedero edición limitada S?gno</h5>
-            <p class="card-text">$20.000</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Total -->
-    <div class="row mt-5">
-      <div class="col-12 text-center">
-        <h4>Total a Pagar</h4>
-        <p class="fs-2 fw-bold">$120.000</p>
-        <a href="pagar.html" class="btn btn-primary btn-lg">PAGAR</a>
+      <div class="total mt-4">
+        <span>Total:</span>
+        <span>$1000</span>
+        <button class="btn btn-dark">Finalizar compra</button>
       </div>
     </div>
   </main>
 
-  <!-- Footer -->
-  <footer class="container d-flex justify-content-between align-items-center py-4 border-top">
+  <footer class="footer d-flex justify-content-between align-items-center py-4 border-top" style="background-color:#000; color:#fff;">
     <div>
       <h3>Contactos</h3>
       <ul class="list-unstyled">
@@ -88,13 +60,12 @@
         <li>Dirección: Concepción, Tucumán</li>
       </ul>
     </div>
-    <h2 class="m-0 text-center">S?gno</h2>
+    <h2 class="m-0 text-center">SIGNO</h2>
     <div>
-      <a href="index.html" class="btn btn-danger">Arrepentirse</a>
+      <a href="../index.html" class="btn btn-danger">Arrepentirse</a>
     </div>
   </footer>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
