--- a/pages/login.html
+++ b/pages/login.html
@@ -1,73 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
-  <!-- Estilos personalizados -->
-  <link rel="stylesheet" href="/css/styles.css" />
-  <title>Log in - S?gno</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../css/styles.css" />
+  <title>Log in - SIGNO</title>
 </head>
 <body class="d-flex flex-column min-vh-100 body-login">
-  <!-- Header -->
-  <header class="container d-flex justify-content-between align-items-center py-3">
-    <div class="d-flex gap-2">
-      <a href="nosotros.html" class="btn btn-outline-dark">Nosotros</a>
-      <a href="tienda.html" class="btn btn-outline-dark">Tienda</a>
+  <!-- Navbar Bootstrap -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+    <div class="container">
+      <a class="navbar-brand" href="../index.html">SIGNO</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="mainNavbar">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="tienda.html">Tienda</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">Log in</a></li>
+          <li class="nav-item"><a class="nav-link" href="carrito.html">Carrito</a></li>
+        </ul>
+      </div>
     </div>
-    <h1 class="m-0">
-      <a href="index.html" class="text-decoration-none text-dark">S?gno</a>
-    </h1>
-    <div class="d-flex gap-2">
-      <a href="login.html" class="btn btn-outline-dark">Log in</a>
-      <a href="carrito.html" class="btn btn-outline-dark">Carrito</a>
-    </div>
-  </header>
+  </nav>
 
-  <!-- Main -->
   <main class="container my-5 flex-grow-1">
+    <h1 class="mb-4">Iniciar Sesión</h1>
     <div class="row justify-content-center">
-      <div class="col-md-6 col-lg-4">
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <h2 class="card-title text-center mb-4">Iniciar sesión</h2>
-            <form class="form-login">
-              <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" id="email" name="email" class="form-control" placeholder="Email" required />
-              </div>
-              <div class="mb-3">
-                <label for="password" class="form-label">Contraseña</label>
-                <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required />
-              </div>
-              <div class="d-grid">
-                <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-              </div>
-            </form>
+      <div class="col-md-6">
+        <form>
+          <div class="mb-3">
+            <label for="email" class="form-label">Correo electrónico</label>
+            <input type="email" class="form-control" id="email" required>
           </div>
-        </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Contraseña</label>
+            <input type="password" class="form-control" id="password" required>
+          </div>
+          <button type="submit" class="btn btn-dark w-100">Ingresar</button>
+        </form>
       </div>
     </div>
   </main>
 
-  <!-- Footer -->
-  <footer class="container d-flex justify-content-between align-items-center py-4 border-top bg-light">
+  <footer class="footer d-flex justify-content-between align-items-center py-4 border-top" style="background-color:#000; color:#fff;">
     <div>
       <h3>Contactos</h3>
-      <ul class="list-unstyled mb-0">
+      <ul class="list-unstyled">
         <li>Email: ejemplo@correo.com</li>
         <li>Teléfono: +54 381 555 1234</li>
         <li>Dirección: Concepción, Tucumán</li>
       </ul>
     </div>
-    <h2 class="m-0 text-center">S?gno</h2>
+    <h2 class="m-0 text-center">SIGNO</h2>
     <div>
-      <a href="index.html" class="btn btn-danger">Arrepentirse</a>
+      <a href="../index.html" class="btn btn-danger">Arrepentirse</a>
     </div>
   </footer>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
