--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,66 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
-  <!-- Estilos personalizados -->
-  <link rel="stylesheet" href="/css/styles.css" />
-  <title>Nosotros - S?gno</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../css/styles.css" />
+  <title>Nosotros - SIGNO</title>
 </head>
 <body class="bg-light d-flex flex-column min-vh-100">
-  <!-- Header -->
-  <header class="container d-flex justify-content-between align-items-center py-3">
-    <div class="d-flex gap-2">
-      <a href="nosotros.html" class="btn btn-outline-dark">Nosotros</a>
-      <a href="tienda.html" class="btn btn-outline-dark">Tienda</a>
-    </div>
-    <h1 class="m-0">
-      <a href="index.html" class="text-decoration-none text-dark">S?gno</a>
-    </h1>
-    <div class="d-flex gap-2">
-      <a href="login.html" class="btn btn-outline-dark">Log in</a>
-      <a href="carrito.html" class="btn btn-outline-dark">Carrito</a>
-    </div>
-  </header>
-
-  <!-- Main -->
-  <main class="container my-5 flex-grow-1">
-    <div class="row align-items-center">
-      <!-- Imagen de la diseñadora -->
-      <div class="col-md-6 text-center mb-4 mb-md-0">
-        <img src="/img/designer.jpg" class="img-fluid rounded" alt="diseñadora" />
+  <!-- Navbar Bootstrap -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+    <div class="container">
+      <a class="navbar-brand" href="../index.html">SIGNO</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="mainNavbar">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="tienda.html">Tienda</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">Log in</a></li>
+          <li class="nav-item"><a class="nav-link" href="carrito.html">Carrito</a></li>
+        </ul>
       </div>
-      <!-- Información de la diseñadora -->
-      <div class="col-md-6">
-        <div class="ps-md-4">
-          <h1 class="fs-3">Candelaria Rojano Sancho Miñano</h1>
-          <p>
-            Signo simboliza un cambio, una señal de evolución hacia un futuro más consciente y responsable con el medio ambiente. Cada prenda lleva una nueva interpretación de lo que fue, transformando textiles y prendas olvidadas en piezas únicas con estilo y propósito. “Signo” refleja un compromiso con la autenticidad y la sostenibilidad, invitando a las personas a vestirse con la intención de marcar una diferencia positiva en el mundo. Como cada signo en el lenguaje tiene un significado, cada prenda cuenta una historia de renovación y transformación.
-          </p>
-        </div>
+    </div>
+  </nav>
+
+  <main class="container my-5 flex-grow-1">
+    <h1 class="mb-4">Sobre Nosotros</h1>
+    <div class="main_nosotros">
+      <div class="info_designer">
+        <img src="../img/designer.jpg" alt="Diseñador" class="designer_img mb-3">
+        <p>
+          Somos SIGNO, una marca dedicada a la moda circular y la creatividad. Nuestro objetivo es transformar prendas recicladas en piezas únicas, expresando la personalidad de cada cliente.
+        </p>
       </div>
     </div>
   </main>
 
-  <!-- Footer -->
-  <footer class="container d-flex justify-content-between align-items-center py-4 border-top">
+  <footer class="footer d-flex justify-content-between align-items-center py-4 border-top" style="background-color:#000; color:#fff;">
     <div>
       <h3>Contactos</h3>
-      <ul class="list-unstyled mb-0">
+      <ul class="list-unstyled">
         <li>Email: ejemplo@correo.com</li>
         <li>Teléfono: +54 381 555 1234</li>
         <li>Dirección: Concepción, Tucumán</li>
       </ul>
     </div>
-    <h2 class="m-0 text-center">S?gno</h2>
+    <h2 class="m-0 text-center">SIGNO</h2>
     <div>
-      <a href="index.html" class="btn btn-danger">Arrepentirse</a>
+      <a href="../index.html" class="btn btn-danger">Arrepentirse</a>
     </div>
   </footer>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
