--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -1,134 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
-  <!-- Estilos personalizados -->
-  <link rel="stylesheet" href="/css/styles.css" />
-  <title>Tienda - S?gno</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../css/styles.css" />
+  <title>Tienda - SIGNO</title>
 </head>
 <body class="bg-light d-flex flex-column min-vh-100">
-  <!-- Header -->
-  <header class="container d-flex justify-content-between align-items-center py-3">
-    <div class="d-flex gap-2">
-      <a href="nosotros.html" class="btn btn-outline-dark">Nosotros</a>
-      <a href="tienda.html" class="btn btn-outline-dark">Tienda</a>
+  <!-- Navbar Bootstrap -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+    <div class="container">
+      <a class="navbar-brand" href="../index.html">SIGNO</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="mainNavbar">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="tienda.html">Tienda</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">Log in</a></li>
+          <li class="nav-item"><a class="nav-link" href="carrito.html">Carrito</a></li>
+        </ul>
+      </div>
     </div>
-    <h1 class="m-0">
-      <a href="index.html" class="text-decoration-none text-dark">S?gno</a>
-    </h1>
-    <div class="d-flex gap-2">
-      <a href="login.html" class="btn btn-outline-dark">Log in</a>
-      <a href="carrito.html" class="btn btn-outline-dark">Carrito</a>
-    </div>
-  </header>
+  </nav>
 
-  <!-- Main -->
   <main class="container my-5 flex-grow-1">
-    <div class="row g-4">
-      <!-- Productos -->
-      <div class="col-md-4 col-lg-3" *ngFor="let producto of productos">
-        <div class="card h-100">
-          <img src="/img/producto 1.jpg" class="card-img-top" alt="Short-pollera handmade S?gno" />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Short-pollera handmade S?gno</h5>
-            <p class="card-text">$30.000</p>
-            <a href="carrito.html" class="btn btn-primary mt-auto">Agregar a carrito</a>
-          </div>
-        </div>
+    <h1 class="mb-4">Tienda</h1>
+    <div class="tienda-grid-container">
+      <!-- Ejemplo de producto -->
+      <div class="tienda-product">
+        <img src="../img/producto1.jpg" alt="Producto 1" class="tienda-product-image">
+        <h5>Producto 1</h5>
+        <p>$1000</p>
+        <button class="btn btn-dark">Agregar al carrito</button>
       </div>
-            <div class="col-md-4 col-lg-3" *ngFor="let producto of productos">
-        <div class="card h-100">
-          <img src="/img/producto 2.jpg" class="card-img-top" alt="Short-pollera handmade S?gno" />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Campera de cuero vacunoS?gno</h5>
-            <p class="card-text">$30.000</p>
-            <a href="carrito.html" class="btn btn-primary mt-auto">Agregar a carrito</a>
-          </div>
-        </div>
+      <div class="tienda-product">
+        <img src="../img/producto2.jpg" alt="Producto 2" class="tienda-product-image">
+        <h5>Producto 2</h5>
+        <p>$1200</p>
+        <button class="btn btn-dark">Agregar al carrito</button>
       </div>
-            <div class="col-md-4 col-lg-3" *ngFor="let producto of productos">
-        <div class="card h-100">
-          <img src="/img/producto 3.jpg" class="card-img-top" alt="Short-pollera handmade S?gno" />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Monedero handmade S?gno</h5>
-            <p class="card-text">$30.000</p>
-            <a href="carrito.html" class="btn btn-primary mt-auto">Agregar a carrito</a>
-          </div>
-        </div>
+      <div class="tienda-product">
+        <img src="../img/producto3.jpg" alt="Producto 3" class="tienda-product-image">
+        <h5>Producto 3</h5>
+        <p>$900</p>
+        <button class="btn btn-dark">Agregar al carrito</button>
       </div>
-            <div class="col-md-4 col-lg-3" *ngFor="let producto of productos">
-        <div class="card h-100">
-          <img src="/img/producto 4.jpg" class="card-img-top" alt="Short-pollera handmade S?gno" />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">top handmade S?gno</h5>
-            <p class="card-text">$30.000</p>
-            <a href="carrito.html" class="btn btn-primary mt-auto">Agregar a carrito</a>
-          </div>
-        </div>
-      </div>
-            <div class="col-md-4 col-lg-3" *ngFor="let producto of productos">
-        <div class="card h-100">
-          <img src="/img/producto 5.jpg" class="card-img-top" alt="Short-pollera handmade S?gno" />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">top de cuero handmade S?gno</h5>
-            <p class="card-text">$30.000</p>
-            <a href="carrito.html" class="btn btn-primary mt-auto">Agregar a carrito</a>
-          </div>
-        </div>
-      </div>
-            <div class="col-md-4 col-lg-3" *ngFor="let producto of productos">
-        <div class="card h-100">
-          <img src="/img/producto 6.jpg" class="card-img-top" alt="Short-pollera handmade S?gno" />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Campera de cuero Allblack handmade S?gno</h5>
-            <p class="card-text">$30.000</p>
-            <a href="carrito.html" class="btn btn-primary mt-auto">Agregar a carrito</a>
-          </div>
-        </div>
-      </div>
-            <div class="col-md-4 col-lg-3" *ngFor="let producto of productos">
-        <div class="card h-100">
-          <img src="/img/producto 7.jpg" class="card-img-top" alt="Short-pollera handmade S?gno" />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Tapado de piel S?gno</h5>
-            <p class="card-text">$30.000</p>
-            <a href="carrito.html" class="btn btn-primary mt-auto">Agregar a carrito</a>
-          </div>
-        </div>
-      </div>
-            <div class="col-md-4 col-lg-3" *ngFor="let producto of productos">
-        <div class="card h-100">
-          <img src="/img/producto 8.jpg" class="card-img-top" alt="Short-pollera handmade S?gno" />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Campera de hilo S?gno</h5>
-            <p class="card-text">$30.000</p>
-            <a href="carrito.html" class="btn btn-primary mt-auto">Agregar a carrito</a>
-          </div>
-        </div>
-      </div>
+      <!-- Agrega más productos según necesites -->
     </div>
   </main>
 
-  <!-- Footer -->
-  <footer class="container d-flex justify-content-between align-items-center py-4 border-top">
+  <footer class="footer d-flex justify-content-between align-items-center py-4 border-top" style="background-color:#000; color:#fff;">
     <div>
       <h3>Contactos</h3>
-      <ul class="list-unstyled mb-0">
+      <ul class="list-unstyled">
         <li>Email: ejemplo@correo.com</li>
         <li>Teléfono: +54 381 555 1234</li>
         <li>Dirección: Concepción, Tucumán</li>
       </ul>
     </div>
-    <h2 class="m-0 text-center">S?gno</h2>
+    <h2 class="m-0 text-center">SIGNO</h2>
     <div>
-      <a href="index.html" class="btn btn-danger">Arrepentirse</a>
+      <a href="../index.html" class="btn btn-danger">Arrepentirse</a>
     </div>
   </footer>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
